assets/css/nav/_left_nav.scss
.m-left-nav {
  width: calc(11.5rem + 1px);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  box-sizing: border-box;
  height: 100%;
  position: relative;

  background-color: $color-gray-50;

  border-right: 1px solid $color-gray-300;
  padding: 1.5rem 1rem;

  .m-left-nav__icon {
    padding-right: 0.75rem;
  }
}

.m-left-nav--collapsed {
  width: 4.25rem;

  .m-left-nav__icon {
    padding-right: 0;
  }
}

.m-left-nav__links {
  display: flex;
  flex-direction: column;
  width: calc(100% + 1px);
  margin: 0;

  :not(:last-child) {
    padding-bottom: 0.5rem;
  }
}

.m-left-nav__link {
  @include button-icon(1.25rem);
  display: flex;
  align-items: center;
  padding: 0.25rem 0.375rem;
  box-sizing: border-box;
  width: 100%;
  height: 2.25rem;
  border-radius: 0.375rem;

  font-weight: 400;
  @include font-body;
  color: $color-gray-600;
  text-decoration: none;

  &:hover {
    background-color: $color-gray-100;
    color: $color-gray-700;
    font-weight: 500;
  }

  &.m-left-nav__link--active {
    background-color: $color-eggplant-100;

    font-weight: 500;
    color: $color-eggplant-800;
  }
}

.m-left-nav__icon {
  &.m-left-nav__icon--late-view svg {
    fill: $color-gray-50;
    stroke: $color-gray-600;

    circle {
      fill: $color-gray-600;
    }

    .clock {
      stroke-width: 2;
    }

    .bang {
      fill: $color-gray-50;
      stroke: none;
    }
  }

  &.m-left-nav__icon--swings-view svg {
    transform: scaleX(-1);
    fill: $color-gray-50;
    stroke: $color-gray-600;
  }
}

